fix timeline content z-index overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ header {
   }
 }
 
+
 .timeline-container {
   padding: 2rem;
   padding-bottom: 400px;
@@ -56,7 +57,6 @@ header {
 
 .line{
   position: absolute;
-  z-index: 2;
   left: calc(50% - 1px);
   width: 2px;
   top: -50px;
